--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "xo": "^0.58.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
+    "mogoose": "^0.0.1-security",
+    "mongoose": "^8.4.0",
     "node": "^22.0.0"
   }
 }
