--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.4.0",
-    "node": "^22.0.0"
+    "node": "^22.0.0",
+    "vite": "^5.2.13"
   }
 }
