--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "xo": "^0.58.0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
