--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "tailwindcss": "^3.4.4",
     "xo": "^0.58.0"
   },
   "dependencies": {
@@ -8,8 +9,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^8.4.0",
+    "mongoose": "^8.4.3",
     "node": "^22.0.0",
-    "vite": "^5.2.13"
+    "react-router-dom": "^6.23.1",
+    "vite": "^5.2.13",
+    "zod": "^3.23.8"
   }
 }
