--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "devDependencies": {
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.4",
+    "wrangler": "^3.63.0",
     "xo": "^0.58.0"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.1",
+    "@prisma/extension-accelerate": "^1.1.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "hono": "^4.4.11",
     "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.4.3",
