--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.4.3",
     "node": "^22.0.0",
+    "path": "^0.12.7",
     "react-router-dom": "^6.23.1",
     "vite": "^5.2.13",
     "zod": "^3.23.8"
